# Foobar-BIU

./: CMakeLists.txt  DockerFile  Dockerfile  README.md
.github/workflows/: cmake-single-platform.yml  docker-publish.yml
src/: AddURLToBlacklist.cpp  AddURLToBlacklist.h  App.cpp  App.h  BloomFilter.cpp  BloomFilter.h  CheckURLInBlacklist.cpp  CheckURLInBlacklist.h  FalsePositiveCheck.cpp  FalsePositiveCheck.h  HashFuncConfirm.cpp  HashFuncConfirm.h  HashFuncs.cpp  HashFuncs.h  IAction.h  IUserInput.h  InStreamInput.cpp  InStreamInput.h  Server.cpp  Server.h  UserInput.cpp  UserInput.h  hashFuncs.cpp  hashFuncs.h  main.cpp  userInput.cpp  userInput.h
tests/: AddURLToBlacklist_test.cpp  App_test.cpp  CheckURLInBlacklist_test.cpp  FalsePositiveCheck_test.cpp  HashFuncConfirm_test.cpp  HashFuncs_test.cpp  InStreamInput_test.cpp  UserInput_test.cpp  addItem_test.cpp  calc_test.cpp  getItem_test.cpp  test_addItemValid.cpp  userInput_test.cpp
